# QualiAI

./: README.md
atf-contest/: requirements.txt
atf-contest/agentic_contest/: README.md  pyproject.toml
atf-contest/agentic_contest/src/agentic_contest/: app.py  crew.py  main.py
atf-contest/agentic_contest/src/agentic_contest/config/: agents.yaml  tasks.yaml
atf-contest/agentic_contest/src/agentic_contest/tools/: custom_tool.py
