[project]
name = "agentic_contest"
version = "0.1.0"
description = "agentic-contest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
agentic_contest = "agentic_contest.main:run"
run_crew = "agentic_contest.main:run"
train = "agentic_contest.main:train"
replay = "agentic_contest.main:replay"
test = "agentic_contest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
